trying to fix double scroll bar on iphone safari

--- a/Styles/index.css
+++ b/Styles/index.css
@@ -13,7 +13,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: linear-gradient(135deg, hsl(0, 0%, 15%) 0%, #292929 100%);
     overflow-x: hidden;
-    overflow-y: auto;
+    overflow-y: hidden;
 }
 
 /**********************************************************************
